# gst-pipeapp

./: .gitignore  CMakeLists.txt  README.md  gst-pipeapp.py  gst-pipeapp.sh  pipeline.txt
src/: CMakeLists.txt  lib.c  main.c  main1.c  pipeapp.h
